package td1.refactor.api.general;

public interface Restaurant {
    BurgerRestaurant sortir_pour_un_burger(RestaurantType type);
}