package td1.refactor.api.general;

public enum RestaurantType {
    BIG_BURGER, MAC_DEAU;
}